# soil_heat

./: .gitignore  .readthedocs.yaml  HISTORY.rst  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md
docs/: G_ranges.rst  conf.py  index.rst  requirements.txt  soil_props.rst  usage.rst
docs/_static/: temp_lag_and_period.rst
docs/autoapi/soil_heat/: index.rst
docs/autoapi/soil_heat/fao56_soil_heat_flux/: index.rst
docs/autoapi/soil_heat/gao_et_al/: index.rst
docs/autoapi/soil_heat/liebethal_and_folken/: index.rst
docs/autoapi/soil_heat/soil_heat/: index.rst
docs/autoapi/soil_heat/storage_calculations/: index.rst
docs/autoapi/soil_heat/wang_and_bouzeid/: index.rst
docs/autoapi/soil_heat/wang_and_yang/: index.rst
docs/notebooks/: FAO56_comparison.ipynb  johansen_examples.ipynb  shf.csv  soil_heat_flux_comparison.ipynb  soil_heat_flux_comparison.py
docs/notebooks/__marimo__/session/: soil_heat_flux_comparison.py.json
src/soil_heat/: __init__.py  cli.py  fao56_soil_heat_flux.py  ga0_et_al.py  gao_et_al.py  johansen.py  liebethal_and_folken.py  soil_ground_heat_flux.py  soil_heat.py  storage_calculations.py  wang_and_bouzeid.py  wang_and_yang.py
tests/: test_fao56.py  test_gao_et_al.py  test_johansen.py  test_liebethal_and_folken.py  test_new_modules.py  test_soil_heat_extra.py  test_wang_and_bouzeid.py  test_wang_and_yang.py
