[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soil_heat"
version = "0.1.0"
description = "Python calculations on Campbell Scientific, Inc. SoilVUE timeseries data to calculate soil heat flux."
readme = "README.rst"
authors = [
  {name = "Paul Inkenbrandt", email = "paulinkenbrandt@utah.gov"}
]
maintainers = [
  {name = "Paul Inkenbrandt", email = "paulinkenbrandt@utah.gov"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/inkenbrandt/soil_heat/issues"
changelog = "https://github.com/inkenbrandt/soil_heat/blob/master/changelog.md"
homepage = "https://github.com/inkenbrandt/soil_heat"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

